--- a/view/index.html
+++ b/view/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js" charset="utf-8"></script>
   <link rel="stylesheet" href="index.css">
   <body>
-    <canvas id="myChart" width="400" height="400"></canvas>
+    <!--<canvas id="myChart" width="400" height="400"></canvas>-->
     <button type="button" onclick="getAccess()">Access Twitter</button>
     <div id="cont">
       <div class="card" v-for="(item, index) in tweets">
