--- a/view/index.html
+++ b/view/index.html
@@ -13,7 +13,7 @@
     <div id="cont">
       <div class="card" v-for="(item, index) in tweets">
         {{index}} <br>
-        {{item.text}}
+        {{item}}
       </div>
     </div>
   </body>
