--- a/view/index.html
+++ b/view/index.html
@@ -6,7 +6,7 @@
   </head>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js" charset="utf-8"></script>
-  <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
+  <!--<script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>-->
   <link rel="stylesheet" href="index.css">
   <body>
     <!--<canvas id="myChart" width="400" height="400"></canvas>-->
