--- a/view/index.html
+++ b/view/index.html
@@ -5,7 +5,16 @@
     <title>Trending Data</title>
   </head>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" charset="utf-8"></script>
   <link rel="stylesheet" href="index.css">
+  <style type="text/css">
+    #mynetwork {
+      width: 600px;
+      height: 400px;
+      border: 1px solid lightgray;
+    }
+  </style>
   <body>
     <!--<canvas id="myChart" width="400" height="400"></canvas>-->
     <button type="button" onclick="getAccess()">Access Twitter</button>
@@ -35,7 +44,11 @@
         </div>
       </div>
     </div>
+    <div id="mynetwork">
+
+    </div>
   </body>
+  <script src="networkGun.js" charset="utf-8"></script>
   <script src="gunSling.js" charset="utf-8"></script>
   <script src="index.js" charset="utf-8"></script>
 </html>
